--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "prepare": "husky install",
+    "commit": "cz"
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.22",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
@@ -26,13 +29,25 @@
     "@vue/eslint-config-airbnb": "^6.0.0",
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^27.0.6",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.32.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^9.7.0",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
+    "husky": "^8.0.0",
     "jest": "^27.0.5",
     "less": "^4.0.0",
-    "less-loader": "^8.0.0"
+    "less-loader": "^8.0.0",
+    "lint-staged": "^13.0.3",
+    "prettier": "2.7.1",
+    "unplugin-auto-import": "^0.11.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
